@@ -1,3 +1,9 @@
+Fri Jun  9 19:25:19 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
+
+        * ace/Thread_Manager.h: Added a new parameter to wait() that
+          determines whether relative or absolute time is used.  Thanks to
+          Sonicfly Zhou <zhoucn at txsec dot com> for this idea.
+
 Fri Jun  9 14:06:52 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
 
         * ace/Hash_Map_With_Allocator_T.{h,inl,cpp}: Enhanced this class
